@@ -1,3 +1,8 @@
+2001-09-12  Tambet Ingo  <tambet@ximian.com>
+
+	* x.pl.in (x_probe): Improved. Reports now if probe is required.
+	Misc bug fixes on updating.
+
 2001-09-12  Hans Petter Jansson  <hpj@ximian.com>
 
 	* filesys.pl.in (xst_filesys_mount_off): Fix format of unmount messages.
